Use List.of() instead of ImmutableList.of()